tests/invalid/multiple_assignment_targets/main.py
if __name__ == '__main__':
    x: int = 0
    y: int = 0
    x = y = 5
